--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "tsx index.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "pnpx simple-git-hooks"
+    "prepare": "simple-git-hooks"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.8.0",
